Finish deprecation warnings. Add lint check in build.
Signed-off-by: Lars Roe <lars@larsroe.com>